# conversation-agent

./: README.md  app.py  conversation.ipynb  pyproject.toml  requirements.txt
src/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
tests/: test_ai_conversation.py  test_ai_response.py  test_conversation.py  test_response.py
