[project]
name = "conversation-agent"
version = "0.1.0"
description = "LangGraph based Japanese Conversation Agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.4.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.0",
    "ipykernel>=6.30.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.4",
    "pytest>=9.1.1",
    "streamlit>=1.59.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
